--- a/capstone/vue/src/assets/Styles.css
+++ b/capstone/vue/src/assets/Styles.css
@@ -1,5 +1,8 @@
 html {
     font-family: 'Mukta', sans-serif;
+    height: 100%;
+    width: 100%;
+    height: auto;
 }
 
 *::-webkit-scrollbar {
@@ -12,7 +15,7 @@ html {
   }
   
   *::-webkit-scrollbar-thumb {
-    background-color:rgba(5, 62, 168, 0.473);    
+    background-color:rgba(157, 125, 233, 0.582);    
     border: 1px solid rgb(245, 245, 245);
     border-radius: 10px;
   }
